--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "quantum-js",
   "version": "1.0.0",
   "description": "![Quantum JavaScript (Q.js)](./assets/Q-mark.svg \"Quantum JavaScript (Q.js)\")",
-  "main": "Q/Q.js",
+  "main": "index.js",
   "scripts": {
-    "test": "npm run test -ws && exit 0",
+    "test": "npm run test -ws",
     "lint": "eslint",
-    "prettier": "prettier --write"
+    "prettier": "npm run prettier -ws"
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.aws.dev/ltnln/q-js"
+    "url": "https://gitlab.aws.dev/ltnln/quantum-js"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +21,9 @@
     "jsdom": "^16.6.0",
     "lerna": "^4.0.0",
     "n": "^7.3.1",
-    "prettier": "2.3.2"
+    "prettier": "2.3.2",
+    "window": "^4.2.7"
   },
-  "dependencies": {},
   "workspaces": [
     "./packages/*"
   ]
