Remove Q folder. Replaced with workspaces

--- a/packages/quantum-js-util/package.json
+++ b/packages/quantum-js-util/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "Q.js",
   "scripts": {
-    "test": "echo 'hello from util!'"
+    "test": "jest",
+    "prettier": "echo 'I am a prettier util!' && exit 0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
