--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "Q/Q.js",
   "scripts": {
     "test": "npm run test -ws",
-    "lint": "eslint",
-    "prettier": "prettier --write",
+    "lint": "npm run lint -ws",
+    "prettier": "npm run prettier -ws",
     "dev": "vite",
     "build": "npx browserify index.js > build/bundle.js && npx concat -o build/bundle.css packages/quantum-js-vis/Q.css packages/quantum-js-vis/Q-Circuit-Editor.css"
   },
