--- a/packages/quantum-js-vis/package.json
+++ b/packages/quantum-js-vis/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "prettier": "echo 'I am a prettier vis!'" 
+    "prettier": "npx prettier --write **/*.js" ,
+    "lint": "npx eslint **/*.js"
   },
   "keywords": [],
   "author": "",
