--- a/packages/quantum-js-util/package.json
+++ b/packages/quantum-js-util/package.json
@@ -2,7 +2,7 @@
   "name": "quantum-js-util",
   "version": "1.0.0",
   "description": "",
-  "main": "Q.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
     "prettier": "echo 'I am a prettier util!' && exit 0"
